Added page header and welcome section.

--- a/assets/src/styles/app.scss
+++ b/assets/src/styles/app.scss
@@ -5,7 +5,10 @@
 @import './app/variables';
 @import './app/typography';
 @import './app/layout';
+@import './app/fonts';
+@import './app/button';
 
 // Theme assets.
 @import './app/page-header';
 @import './app/page-nav';
+@import './app/welcome';
