--- a/assets/src/styles/app/variables.scss
+++ b/assets/src/styles/app/variables.scss
@@ -1,9 +1,17 @@
+// Fonts Variables
+$primary-font: 'Poppins', Helvetica, sans-serif;
+$secondary-font: 'Work Sans', Georgia, serif;
+
 // Layout.
 $content-width: 1200px;
 $page-header-height: 70px;
 
+// Colors.
+$blue: #5e60ff;
+
 // Text colors.
-$color-text: #000;
+$color-header: #292929;
+$color-text: #4b4b4b;
 
 $color-link: #000;
 $color-link-hover: #000;
