--- a/assets/src/styles/app/page-header.scss
+++ b/assets/src/styles/app/page-header.scss
@@ -1,6 +1,7 @@
 // Sticky header.
 .page-header {
 	position: fixed;
+	background: #ffffff;
 	top: 0;
 	z-index: 10;
 	width: 100%;
@@ -15,7 +16,12 @@
 
 	.page-logo {
 		margin: 0;
-		font-size: 24px;
+	}
+
+	.page-nav {
+		font-size: 12px;
+		font-weight: 500;
+		text-transform: uppercase;
 	}
 }
 
