--- a/assets/src/styles/app/typography.scss
+++ b/assets/src/styles/app/typography.scss
@@ -1,6 +1,19 @@
 // General text styles.
 body {
+	font-family: $secondary-font;
 	color: $color-text;
+}
+
+// Headers styles.
+h2, h3 {
+	font-family: $primary-font;
+	font-weight: 700;
+	color: $color-header;
+}
+
+h2 {
+	font-size: 40px;
+	line-height: 54px;
 }
 
 // Link styles.
