Enhanced header and welcome section.

--- a/assets/src/styles/app/fonts.scss
+++ b/assets/src/styles/app/fonts.scss
@@ -11,10 +11,10 @@
 @font-face {
 	font-family: 'Poppins';
 	font-style: normal;
-	font-weight: 600;
+	font-weight: 500;
 	src:
-		local('Poppins Semi Bold'),
-		local('Poppins-Semi-Bold'),
+		local('Poppins Medium'),
+		local('Poppins-Medium'),
 		url(//fonts.gstatic.com/s/poppins/v1/aDjpMND83pDErGXlVEr-SS3USBnSvpkopQaUR-2r7iU.ttf) format('truetype');
 }
 
