--- a/assets/src/styles/app/button.scss
+++ b/assets/src/styles/app/button.scss
@@ -1,6 +1,6 @@
 .btn {
 	display: inline-block;
-	padding: 18px 30px;
+	padding: 20px 30px 16px;
 	border-radius: 4px;
 	outline: 0;
 	background: #ffffff;
@@ -8,6 +8,7 @@
 	font-size: 12px;
 	font-weight: 500;
 	text-decoration: none;
+	letter-spacing: .6px;
 	text-transform: uppercase;
 	cursor: pointer;
 	transition: all .3s;
@@ -15,7 +16,9 @@
 	&:not([disabled]) {
 		&:hover,
 		&:focus {
+			color: $dark-blue;
 			text-decoration: none;
+			background: #f5f5ff;
 		}
 
 		&:active {
