--- a/assets/src/styles/app/page-header.scss
+++ b/assets/src/styles/app/page-header.scss
@@ -16,12 +16,55 @@
 
 	.page-logo {
 		margin: 0;
+
+		a {
+			display: block;
+
+			img {
+				display: block;
+			}
+		}
 	}
 
+	// General desktop menu styles.
 	.page-nav {
-		font-size: 12px;
-		font-weight: 500;
-		text-transform: uppercase;
+		ul {
+			transform: translate(0, 0);
+
+			li {
+				display: inline-block;
+				padding-left: 30px;
+				line-height: 2.4em;
+
+				a {
+					position: relative;
+					text-decoration: none;
+					font-size: 12px;
+					text-transform: uppercase;
+					letter-spacing: .6px;
+					font-weight: 500;
+					padding: 8px;
+
+					&:hover {
+						&:before {
+							opacity: 1;
+							transition: opacity .8s;
+						}
+					}
+
+					&:before {
+						content: '';
+						position: absolute;
+						right: 6px;
+						bottom: 12px;
+						left: 6px;
+						height: 1px;
+						background: $color-text;
+						opacity: 0;
+					}
+				}
+			}
+		}
 	}
 }
 
