Added about section.

--- a/assets/src/styles/app/typography.scss
+++ b/assets/src/styles/app/typography.scss
@@ -25,3 +25,10 @@ a {
 		color: $color-link-hover;
 	}
 }
+
+// Text styles.
+p {
+	font-family: $secondary-font;
+	font-size: 14px;
+	line-height: 2;
+}
