--- a/assets/src/styles/app/variables.scss
+++ b/assets/src/styles/app/variables.scss
@@ -19,3 +19,6 @@ $color-link-hover: #000;
 
 // Breakpoints.
 $breakpoint-mobile-navigation: 860px;
+
+// Paddings.
+$section-padding: 80px 20px 100px;
