--- a/assets/src/styles/app/button.scss
+++ b/assets/src/styles/app/button.scss
@@ -1,17 +1,17 @@
 .btn {
 	display: inline-block;
-	padding: 20px 30px 16px;
-	border-radius: 4px;
+	padding: 16px 30px 14px;
 	outline: 0;
+	border: solid 2px;
 	background: #ffffff;
 	color: $blue;
-	font-size: 12px;
+	font-family: $secondary-font;
+	font-size: 14px;
 	font-weight: 500;
 	text-decoration: none;
-	letter-spacing: .6px;
-	text-transform: uppercase;
 	cursor: pointer;
 	transition: all .3s;
+	box-shadow: 4px 4px 0px 0px $dark-blue;
 
 	&:not([disabled]) {
 		&:hover,
@@ -33,3 +33,4 @@
 		cursor: not-allowed;
 	}
 }
+
