--- a/assets/src/styles/app/welcome.scss
+++ b/assets/src/styles/app/welcome.scss
@@ -5,8 +5,8 @@
 	background-position: left, right;
 
 	.inner {
-		padding-top: 190px;
-		padding-bottom: 190px;
+		padding-top: 180px;
+		padding-bottom: 180px;
 		text-align: center;
 
 		h2 {
@@ -22,7 +22,7 @@
 			padding-top: 20px;
 
 			.btn {
-				box-shadow: 0 30px 20px -15px $dark-blue;
+				border-color: $dark-blue;
 			}
 
 			img {
