--- a/assets/src/styles/app/variables.scss
+++ b/assets/src/styles/app/variables.scss
@@ -9,6 +9,7 @@ $page-header-height: 70px;
 // Colors.
 $blue: #5e60ff;
 $dark-blue: #4b43ff;
+$grey: #eff0f2;
 
 // Text colors.
 $color-header: #292929;
@@ -21,4 +22,5 @@ $color-link-hover: #000;
 $breakpoint-mobile-navigation: 860px;
 
 // Paddings.
-$section-padding: 80px 20px 100px;
+$layout-padding: 0 30px;
+$section-padding: 100px 30px 120px;
