--- a/assets/src/styles/app.scss
+++ b/assets/src/styles/app.scss
@@ -7,6 +7,7 @@
 @import './app/layout';
 @import './app/fonts';
 @import './app/button';
+@import './app/utils';
 
 // Theme assets.
 @import './app/page-header';
@@ -16,3 +17,4 @@
 @import './app/history';
 @import './app/services';
 @import './app/works';
+@import './app/project';
