--- a/assets/src/styles/app/typography.scss
+++ b/assets/src/styles/app/typography.scss
@@ -5,7 +5,7 @@ body {
 }
 
 // Headers styles.
-h2, h3 {
+h2, h3, h4 {
 	font-weight: 700;
 	color: $color-header;
 }
@@ -13,10 +13,6 @@ h2, h3 {
 h2 {
 	font-size: 40px;
 	line-height: 54px;
-}
-
-h3 {
-	font-size: 32px;
 }
 
 // Link styles.
