Added contact and footer section.

--- a/assets/src/styles/app.scss
+++ b/assets/src/styles/app.scss
@@ -8,6 +8,7 @@
 @import './app/fonts';
 @import './app/button';
 @import './app/utils';
+@import './app/reset';
 
 // Theme assets.
 @import './app/page-header';
@@ -19,3 +20,5 @@
 @import './app/works';
 @import './app/project';
 @import './app/orders';
+@import './app/contact';
+@import './app/footer';
