--- a/assets/src/styles/app/orders.scss
+++ b/assets/src/styles/app/orders.scss
@@ -11,13 +11,15 @@
 			justify-content: flex-start;
 
 			& > div {
-				width: 60%;
-				padding-right: 5%;
+				width: 65%;
+				padding-right: 90px;
 			}
 
 			aside {
 				h4 {
-					font-weight: 500;
+					font-family: $secondary-font;
+					font-weight: 400;
+					font-size: 14px;
 				}
 
 				a {
