--- a/assets/src/styles/app/page-header.scss
+++ b/assets/src/styles/app/page-header.scss
@@ -38,6 +38,7 @@
 
 				a {
 					position: relative;
+					color: $color-header;
 					text-decoration: none;
 					font-size: 12px;
 					text-transform: uppercase;
