Added toggle menu, reset and some padding fixes.

--- a/assets/src/styles/app/services.scss
+++ b/assets/src/styles/app/services.scss
@@ -13,8 +13,8 @@
 			li {
 				display: inline-block;
 				padding-top: 110px;
+				padding-bottom: 50px;
 				width: 29%;
-				height: 120px;
 				line-height: 1.6;
 				background: 50% 0 no-repeat;
 			}
