--- a/assets/src/styles/app/reset.scss
+++ b/assets/src/styles/app/reset.scss
@@ -4,3 +4,9 @@ html {
 *, *:before, *:after {
 	box-sizing: inherit;
 }
+
+body, p, ul, li, fieldset, h1, h2, h3 {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
