--- a/assets/src/styles/app/variables.scss
+++ b/assets/src/styles/app/variables.scss
@@ -21,3 +21,9 @@ $breakpoint-mobile-navigation: 860px;
 // Paddings.
 $layout-padding: 0 40px;
 $section-padding: 90px 40px 110px;
+
+
+   // Mobile variables //
+
+// Paddings.
+$section-padding-960: 70px 40px 90px;
