--- a/assets/src/styles/app/about.scss
+++ b/assets/src/styles/app/about.scss
@@ -6,12 +6,38 @@
 		background-position: calc(100% - 290px) calc(50% - 150px), calc(100% - 290px) calc(50% + 150px), calc(100% - 60px) 50%;
 
 		p {
-			max-width: 50%;
+			max-width: 52%;
+			padding-bottom: 20px;
 		}
 
 		.btn {
 			padding: 20px 40px 18px;
-			margin-top: 40px;
+			margin-top: 20px;
 		}
 	}
 }
+
+@media all and (max-width: 1100px) {
+	.about {
+		.inner {
+			p {
+				max-width: 45%;
+			}
+		}
+	}
+}
+
+@media all and (max-width: 960px) {
+	.about {
+		.inner {
+			padding: $section-padding-960;
+			background-image: none;
+
+			p {
+				max-width: 100%;
+			}
+		}
+	}
+}
+
+
