--- a/assets/src/styles/app/history.scss
+++ b/assets/src/styles/app/history.scss
@@ -16,3 +16,21 @@
 		}
 	}
 }
+
+@media all and (max-width: 1100px) {
+	.history {
+		.inner {
+			h3 {
+				font-size: 24px;
+			}
+		}
+	}
+}
+
+@media all and (max-width: 960px) {
+	.history {
+		.inner {
+			padding: $section-padding-960;
+		}
+	}
+}
