--- a/assets/src/styles/app/orders.scss
+++ b/assets/src/styles/app/orders.scss
@@ -11,8 +11,12 @@
 			justify-content: flex-start;
 
 			& > div {
-				width: 65%;
-				padding-right: 90px;
+				width: 75%;
+				padding-right: 130px;
+
+				h3 {
+					font-size: 20px;
+				}
 			}
 
 			aside {
@@ -31,6 +35,35 @@
 					height: 64px;
 					width: 52px;
 					background: url(../images/download-frame.svg) 0 0 no-repeat;
+				}
+			}
+		}
+	}
+}
+
+@media all and (max-width: 1100px) {
+	.orders {
+		.inner {
+			.single-order {
+				& > div {
+					h3 {
+						font-size: 16px;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media all and (max-width: 960px) {
+	.orders {
+		.inner {
+			padding: $section-padding-960;
+
+			.single-order {
+				& > div {
+					width: 75%;
+					padding-right: 50px;
 				}
 			}
 		}
