--- a/assets/src/styles/app/project.scss
+++ b/assets/src/styles/app/project.scss
@@ -26,3 +26,23 @@
 		}
 	}
 }
+
+@media all and (max-width: 1100px) {
+	.project {
+		.inner {
+			.logos {
+				img {
+					width: 45%;
+				}
+			}
+		}
+	}
+}
+
+@media all and (max-width: 960px) {
+	.project {
+		.inner {
+			padding: $section-padding-960;
+		}
+	}
+}
