--- a/assets/src/styles/app/typography.scss
+++ b/assets/src/styles/app/typography.scss
@@ -8,7 +8,7 @@ body {
 h2, h3, h4 {
 	font-weight: 700;
 	color: $color-header;
-	padding-bottom: 40px;
+	padding-bottom: 30px;
 }
 
 h2 {
@@ -30,4 +30,11 @@ p, ul, form {
 	font-family: $secondary-font;
 	font-size: 14px;
 	line-height: 2;
+}
+
+@media all and (max-width: 1100px) {
+	h2 {
+		font-size: 32px;
+		line-height: 44px;
+	}
 }
