--- a/assets/src/styles/app/welcome.scss
+++ b/assets/src/styles/app/welcome.scss
@@ -19,7 +19,6 @@
 			align-items: center;
 			max-width: 480px;
 			margin: 0 auto;
-			padding-top: 40px;
 
 			.btn {
 				background-color: #ffffff;
@@ -42,3 +41,15 @@
 		}
 	}
 }
+
+@media all and (max-width: 1020px) {
+	.welcome {
+		background-image: none;
+
+		.inner {
+			padding-top: 140px;
+			padding-bottom: 140px;
+		}
+	}
+}
+
