--- a/assets/src/styles/app/works.scss
+++ b/assets/src/styles/app/works.scss
@@ -7,3 +7,11 @@
 		padding: $section-padding;
 	}
 }
+@media all and (max-width: 960px) {
+	.works {
+		.inner {
+			padding: $section-padding-960;
+		}
+	}
+}
+
