--- a/assets/src/styles/app/variables.scss
+++ b/assets/src/styles/app/variables.scss
@@ -27,3 +27,5 @@ $section-padding: 90px 40px 110px;
 
 // Paddings.
 $section-padding-960: 70px 40px 90px;
+$section-padding-700: 50px 20px 70px;
+$layout-padding-700: 0 20px;
