--- a/assets/src/styles/app/layout.scss
+++ b/assets/src/styles/app/layout.scss
@@ -2,4 +2,8 @@
 	max-width: $content-width;
 	padding: $layout-padding;
 	margin: 0 auto;
+
+	@media all and (max-width: 700px) {
+		padding: $layout-padding-700;
+	}
 }
