--- a/assets/src/styles/app/orders.scss
+++ b/assets/src/styles/app/orders.scss
@@ -22,7 +22,7 @@
 			aside {
 				h4 {
 					font-family: $secondary-font;
-					font-weight: 400;
+					font-weight: 500;
 					font-size: 14px;
 				}
 
@@ -64,6 +64,29 @@
 				& > div {
 					width: 75%;
 					padding-right: 50px;
+				}
+			}
+		}
+	}
+}
+
+@media all and (max-width: 800px) {
+	.orders {
+		.inner {
+			.single-order {
+				display: inline-block;
+
+				& > div {
+					width: 100%;
+					padding-right: 0;
+				}
+
+				aside {
+					padding-top: 30px;
+
+					h4 {
+						padding-bottom: 0;
+					}
 				}
 			}
 		}
