--- a/assets/src/styles/app/services.scss
+++ b/assets/src/styles/app/services.scss
@@ -14,7 +14,7 @@
 				display: inline-block;
 				padding-top: 110px;
 				padding-bottom: 50px;
-				width: 29%;
+				width: 28%;
 				line-height: 1.6;
 				background: 50% 0 no-repeat;
 			}
@@ -62,6 +62,35 @@
 	.services {
 		.inner {
 			padding: $section-padding-960;
+		}
+	}
+}
+
+@media all and (max-width: 700px) {
+	.services {
+		.inner {
+			padding: $section-padding-700;
+
+			ul {
+				li {
+					padding-top: 100px;
+					padding-bottom: 40px;
+					width: 40%;
+					line-height: 1.4;
+				}
+			}
+		}
+	}
+}
+
+@media all and (max-width: 500px) {
+	.services {
+		.inner {
+			ul {
+				li {
+					width: 60%;
+				}
+			}
 		}
 	}
 }
