--- a/assets/src/styles/app/history.scss
+++ b/assets/src/styles/app/history.scss
@@ -41,6 +41,11 @@
 			padding: $section-padding-700;
 			text-align: left;
 
+			h3 {
+				font-size: 18px;
+				line-height: 1.4;
+			}
+
 			.col-2 {
 				display: inline-block;
 
