--- a/assets/src/styles/app/orders.scss
+++ b/assets/src/styles/app/orders.scss
@@ -24,6 +24,7 @@
 					font-family: $secondary-font;
 					font-weight: 500;
 					font-size: 14px;
+					padding-bottom: 10px;
 				}
 
 				a {
@@ -83,10 +84,6 @@
 
 				aside {
 					padding-top: 30px;
-
-					h4 {
-						padding-bottom: 0;
-					}
 				}
 			}
 		}
