--- a/assets/src/styles/app/page-header.scss
+++ b/assets/src/styles/app/page-header.scss
@@ -49,7 +49,6 @@
 					&:hover {
 						&:before {
 							opacity: 1;
-							transition: opacity .8s;
 						}
 					}
 
@@ -62,6 +61,7 @@
 						height: 1px;
 						background: $color-text;
 						opacity: 0;
+						transition: opacity .8s;
 					}
 				}
 			}
@@ -110,7 +110,7 @@
 body {
 	padding-top: $page-header-height;
 
-	@media all and (max-width: 760px) {
+	@media all and (max-width: 700px) {
 		padding-top: 56px;
 	}
 }
@@ -145,7 +145,7 @@ body {
 					a {
 						text-align: left;
 						// @TODO: padding-left should be taken from inner.
-						padding: 17px 40px 15px;
+						padding: 15px 40px 13px;
 						border-top: solid 1px #cecee4;
 
 						&:hover {
@@ -206,10 +206,28 @@ body {
 	}
 }
 
-@media all and (max-width: 760px) {
+@media all and (max-width: 700px) {
 	.page-header {
 		.inner {
 			min-height: 56px;
+		}
+
+		.page-logo {
+				img {
+					width: 180px;
+				}
+			}
+
+		.page-nav {
+			ul {
+				padding-top: 55px;
+
+				li {
+					a {
+						padding: 10px 20px 10px;
+					}
+				}
+			}
 		}
 	}
 }
