--- a/assets/src/styles/app/typography.scss
+++ b/assets/src/styles/app/typography.scss
@@ -12,8 +12,8 @@ h2, h3, h4 {
 }
 
 h2 {
-	font-size: 40px;
-	line-height: 54px;
+	font-size: 38px;
+	line-height: 1.3;
 }
 
 // Link styles.
@@ -35,14 +35,14 @@ p, ul, form {
 @media all and (max-width: 1100px) {
 	h2 {
 		font-size: 32px;
-		line-height: 44px;
+		line-height: 1.3;
 	}
 }
 
 @media all and (max-width: 736px) {
 	h2 {
 		font-size: 26px;
-		line-height: 38px;
+		line-height: 1.4;
 	}
 
 	p, ul, form {
@@ -53,7 +53,7 @@ p, ul, form {
 @media all and (max-width: 600px) {
 	h2 {
 		font-size: 22px;
-		line-height: 32px;
+		line-height: 1.5;
 	}
 }
 
