--- a/assets/src/styles/app/welcome.scss
+++ b/assets/src/styles/app/welcome.scss
@@ -70,3 +70,14 @@
 	}
 }
 
+@media all and (max-width: 400px) {
+	.welcome {
+		.inner {
+			h2 {
+				font-size: 20px;
+				line-height: 1.4;
+			}
+		}
+	}
+}
+
