Cleaned icons in services section.

--- a/assets/src/styles/app/services.scss
+++ b/assets/src/styles/app/services.scss
@@ -31,8 +31,8 @@
 				background-image: url(../images/drain.svg);
 			}
 
-			.geo {
-				background-image: url(../images/geo.svg);
+			.garbage {
+				background-image: url(../images/garbage.svg);
 			}
 
 			.eye {
