--- a/assets/src/styles/app/project.scss
+++ b/assets/src/styles/app/project.scss
@@ -53,9 +53,11 @@
 	}
 }
 
-@media all and (max-width: 720px) {
+@media all and (max-width: 700px) {
 	.project {
 		.inner {
+			padding: $section-padding-700;
+
 			.col-2 {
 				display: inline-block;
 
