--- a/assets/src/styles/app/welcome.scss
+++ b/assets/src/styles/app/welcome.scss
@@ -5,14 +5,12 @@
 	background-position: left, right;
 
 	.inner {
-		padding-top: 130px;
+		padding-top: 150px;
 		padding-bottom: 150px;
 		text-align: center;
 
 		h2 {
-			span {
-				display: none;
-			}
+			padding-bottom: 50px;
 		}
 
 		p {
@@ -36,6 +34,10 @@
 		.inner {
 			padding-top: 90px;
 			padding-bottom: 90px;
+
+			h2 {
+				padding-bottom: 30px;
+			}
 		}
 	}
 }
@@ -46,15 +48,6 @@
 			padding-top: 70px;
 			padding-bottom: 70px;
 
-			h2 {
-				img {
-					display: none;
-				}
-
-				span {
-					display: inline-block;
-				}
-			}
 
 			p {
 				max-width: 400px;
