--- a/assets/src/styles/app/contact.scss
+++ b/assets/src/styles/app/contact.scss
@@ -3,6 +3,25 @@
 		padding: $section-padding;
 		text-align: center;
 
+		h3 {
+			font-family: $secondary-font;
+			color: $color-text;
+			font-size: 14px;
+			font-weight: 400;
+			line-height: 26px;
+		}
+
+		.col-2 {
+			text-align: left;
+			width: 510px;
+			margin: 0 auto;
+			padding-bottom: 70px;
+
+			.phones {
+				width: 170px;
+			}
+		}
+
 		form {
 			height: 330px;
 			width: 35%;
@@ -115,6 +134,24 @@
 
 			form {
 				width: 350px;
+			}
+		}
+	}
+}
+
+@media all and (max-width: 700px) {
+	.contact {
+		.inner {
+			padding: $section-padding-700;
+
+			.col-2 {
+				width: 250px;
+				flex-direction: column;
+				text-align: center;
+
+				.col {
+					width: 100%;
+				}
 			}
 		}
 	}
