--- a/assets/src/styles/app/contact.scss
+++ b/assets/src/styles/app/contact.scss
@@ -50,6 +50,7 @@
 				}
 
 				.control {
+					display: block;
 					width: 100%;
 					height: 36px;
 					border: solid #cccccc;
@@ -95,9 +96,9 @@
 				color: #ff7777;
 
 				span {
+					font-size: 12px;
 					position: absolute;
 					right: 0;
-					bottom: -2px;
 				}
 
 				.control {
